# ACS-final-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  test.cpp  test.h  tieredCuckooHash.h
src/data/: data1kb.txt  data4kb.txt  dataInfo.py  grapher.py  grapherRatio.py  grapherSaving.py
writeup/: main.typ  refs.bib
